--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
+
 body {
   justify-content: center;
   display: flex;
@@ -7,7 +9,6 @@ body {
 
 div {
   display: block;
-  border: 1px red solid;
 }
 
 .osc--modal {
@@ -15,14 +16,22 @@ div {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+  width: 450px;
+  border-radius: 10%;
+
 }
 
 .osc--mainText {
-  text-align: justify;
-  width:10%;
+  font-family: "Red Hat Display";  
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 40%;
 }
 
 .osc--topImage {
   background-image: url(/images/illustration-hero.svg);
   background-repeat: no-repeat;
+
 }
