--- a/styles/index.css
+++ b/styles/index.css
@@ -19,9 +19,6 @@ body {
 
 div {
   display: block;
-  /* border: solid red 1px; */
-
-  
 }
 
 .osc--plan{
@@ -33,7 +30,7 @@ div {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  width: 450px;
+  width: 375px;
   border-radius: 10%;
   background-color: white;
 
@@ -47,6 +44,7 @@ div {
   flex-wrap: wrap;
   flex-direction: column;
   width: 60%;
+  margin-bottom: 10px;
 }
 
 .osc--topImage {
@@ -63,14 +61,22 @@ div {
 }
 
 .osc--plan-text{
-  background-color: grey;
+  background-color: lightgray;
   text-align: center;
+
+  display: flex;
+  flex-direction:row;
+}
+
+.osc--plan-text div{
+  vertical-align: middle;
 }
 
 .osc--plan-text::before{
   display: block;
   float: left;
   content: url("../images/icon-music.svg");
+
 }
 
 .btn--payment {
@@ -86,7 +92,8 @@ div {
   text-align: center;
   margin:auto;
   display:block;
-  border-radius: 10px
+  border-radius: 10px;
+  width:90%;
 }
 
 .btn--cancelOrder{
@@ -102,7 +109,8 @@ div {
   text-align: center;
   margin:auto;
   display:block;
-  border-radius: 10px
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .button {
