--- a/styles/index.css
+++ b/styles/index.css
@@ -1,27 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
 
 body {
   justify-content: center;
   display: flex;
   flex-direction: row;
-  margin-top: 5%;
-  background-image: url(/images/pattern-background-desktop.svg)
-
+  
+  background-image: url(/images/pattern-background-desktop.svg);
 }
 
-.osc--section{
-  padding: 0 20px;
+h2 {
+  color: hsl(223, 47%, 23%);
 }
 
-.osc--section div{
+.osc--section {
+  padding: 0 40px;
+}
+
+.osc--section div {
   width: 100%;
 }
 
 div {
   display: block;
+
 }
 
-.osc--plan{
+.osc--plan {
   text-align: center;
 }
 
@@ -33,53 +37,53 @@ div {
   width: 375px;
   border-radius: 10%;
   background-color: white;
-
+  font-family:"Red Hat Display"
 }
 
 .osc--mainText {
-  font-family: "Red Hat Display";  
+  font-family: "Red Hat Display";
+  color: hsl(224, 23%, 55%);
   font-size: 16px;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   width: 60%;
-  margin-bottom: 10px;
+  margin-bottom: 5%;
 }
 
 .osc--topImage {
   background-image: url("../images/illustration-hero.svg");
   background-repeat: no-repeat;
-  height: 200px;
-  width:100%;
+  height: 220px;
+  width: 100%;
   border-radius: 10px 10px 0px 0px;
-
 }
 
-.osc--plan span{
+.osc--plan span {
   display: block;
 }
 
-.osc--plan-text{
-  background-color: lightgray;
+.osc--plan-text {
+  background-color: hsl(225, 100%, 98%);
   text-align: center;
-
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
+  padding-top: 10px;
 }
 
-.osc--plan-text div{
+.osc--plan-text div {
   vertical-align: middle;
 }
 
-.osc--plan-text::before{
+.osc--plan-text::before {
   display: block;
   float: left;
   content: url("../images/icon-music.svg");
-
 }
 
 .btn--payment {
+  font-family:"Red Hat Display";
   background-color: hsl(245, 75%, 52%);
   color: hsl(0, 0%, 100%);
   border: none;
@@ -90,30 +94,74 @@ div {
   display: inline-block;
   font-size: 16px;
   text-align: center;
-  margin:auto;
-  display:block;
+  margin: auto;
+  display: block;
   border-radius: 10px;
-  width:90%;
+  width: 90%;
+  cursor: pointer;
+  font-weight: 700;
 }
 
-.btn--cancelOrder{
-  background-color: hsl(224, 23%, 55%);
-  color: hsl(0, 0%, 100%);
+.btn--payment:hover{
+  background-color: hsl(225, 100%, 94%);
+  
+}
+
+.btn--cancelOrder {
+  font-family:"Red Hat Display";
+  background-color: white;
+  color: hsl(224, 23%, 55%);
   border: none;
-  color: black;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   text-align: center;
-  margin:auto;
-  display:block;
+  margin: auto;
+  display: block;
   border-radius: 10px;
   margin-bottom: 10px;
+  cursor: pointer;
+  font-weight: 700;
+}
+
+.btn--cancelOrder:hover{
+  color: hsl(245, 75%, 52%);
+} 
+
+.osc--Annualplan {
+  color: hsl(223, 47%, 23%);
+  font-weight: 700;
+  float: left;
+  margin-left: -50px;
+  margin-top: 5px;
+}
+
+.osc--Priceplan {
+  color: hsl(224, 23%, 55%);
+  font-weight: 700;
+  margin-left: -50px;
+  line-height: -10%;
 }
 
 .button {
-  margin:auto;
-  display:block;
+  margin: auto;
+  display: block;
+}
+
+.osc--btnChange {
+  font-family:"Red Hat Display";
+  line-height: 50px;
+  color: hsl(245, 75%, 52%);
+  text-decoration: underline;
+  font-weight: 700;
+  cursor: pointer;
+  background-color: white;
+  border: none;
+  margin-right: 10px;
+}
+
+.osc--btnChange:hover{
+ color: hsl(225, 100%, 94%);
 }
